# dropinapond

./: .env.example  .gitignore  CLAUDE.md  HANDOVER.md  README.md  VISION.md  pyproject.toml  server.sh  start.sh
.claude/commands/: ego-session.md
docs/: ARCHITECTURE.md  CONTINUOUS_FIELDS.md  CONVERSATIONAL_INTERFACE.md  IMPLEMENTATION.md  INDEX.md  NEO4J_BACKEND.md  NEO4J_MIGRATION_PLAN.md  REFINEMENTS.md  SEMANTIC_FLOW_GUIDE.md  V02_MIGRATION.md  VISION.md
docs/investigations/: STANDOUT_ANALYSIS_FIX.md
fixtures/ego_graphs/: fronx.json
gui/: .env.example  README.md  package-lock.json  package.json  vite.config.js
gui/src/: App.jsx
ideas/: AUDIT_REPORT.md  DISTRIBUTED.md  IMPLEMENTATION.md  TEMPORAL_DYNAMICS.md
schema/: ego_graph_v02.json
schemas/: connection.schema.json  contact_points.schema.json  edges.schema.json  metadata.schema.json  phrase.schema.json  self.schema.json
scripts/: README.md  analyze_from_neo4j.py  import_to_neo4j.py  resume_neo4j.py  start_server.py
server/: main.py
src/: ANALYSIS.md  clustering.py  compute_coherence.py  debug_affinity_pair.py  ego_ops.py  embeddings.py  metric_dependencies.json  metric_labels.json  neo4j_storage.py  render_graph_demo.py  semantic_flow.py  storage.py  translation_hints.py  validation.py
src/dropinapond.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flow_analysis/: __init__.py  blending.py  clustering.py  coherence.py  semantic.py  serialize.py
src/semantic_flow/: __init__.py  phrase_similarities.py  semantic.py  serialize.py  structural.py  suggestions.py
(+16 files in other folders)
