[project]
name = "dropinapond"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24,<2.0",
    "networkx>=3.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.9.4",
    "chromadb>=1.2.1",
    "sentence-transformers>=5.1.2",
    "neo4j~=5.28.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aura-cli>=0.7.0",
]
